# ctt_client

./: .gitignore  Cargo.toml  README.md  build.rs  issues.graphql  newIssue.graphql  query.graphql  query.rs  schema.graphql
.gitea/workflows/: package.yaml
graphql/: close_issue.graphql  get_issue.graphql  list_issues.graphql  modify_issue.graphql  open_issue.graphql  schema.graphql
src/: cli.rs  lib.rs  main.rs  queries.rs
src/queries/: close_issue.rs  get_issue.rs  list_issues.rs  mod.rs  modify_issue.rs  open_issue.rs
