[package]
name = "ctt_client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Graphql api for CTT"
repository = "https://github.com/Will-Shanks/ctt_client"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
graphql_client = { version = "0.13", features = ["reqwest-blocking"] }
munge_auth = { path= "../munge" }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = "1"
serde_json = "1"
